--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
     "@material-ui/styles": "3.0.0-alpha.10",
+    "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "react": "17.0.0",
+    "react-bootstrap": "2.0.2",
+    "react-bootstrap-button-loader": "2.0.0",
     "react-dom": "17.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "2.0.3",
