--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "3.0.0-alpha.10",
     "axios": "0.24.0",
     "bootstrap": "5.1.3",
+    "crypto": "1.0.1",
     "react": "17.0.0",
     "react-bootstrap": "2.0.2",
     "react-bootstrap-button-loader": "2.0.0",
