--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "crypto": "1.0.1",
+    "material-ui-password-field": "2.1.2",
     "react": "17.0.0",
     "react-bootstrap": "2.0.2",
     "react-bootstrap-button-loader": "2.0.0",
